# 1.2.7

- updates STRT-Seq to default to passing (undocumented) SC5P-R1 chemistry inputs to Cell Ranger
- enables SC5P-R1 chemistry to run without read2 arguments

# 1.2.6

- updates BD Rhapsody to support v2 enhanced beads released in 2022
- resolves minor bugs in BD Rhapsody v1 

### 1.2.5.2

- updates to SLiPT-Seq subroutine to correct removing quality scores from adapter sequence
- updates SLiPT-Seq barcode whitelist to allow reverse-complement in R2 and trims UMI from 8 to 10 bp
- allow mismatches to remove linker sequences for SLiPT-Seq v1 or v2.1 and allow reverse complement in R2 (for NextSeq, NovaSeq v1.5, etc)
- pass command-line arguments to configure cell ranger
- correct generating combinatorial whitelists for well-based techniques

### 1.2.5.1

- minor patch to revert potentially breaking changes in v1.2.5 when running perl instead of sed 

### 1.2.5

- updates PATH environment variable to call /universc/launch_universc.sh from any working directory

- enables double or triple digit lane numbers (suppports 16 lane NovaSeq X series
scheduled for launch in Q1 2023, expected to be compatible with older models and
BGI or Ultima high throughput sequencing platforms)

- migrates sed calls to perl for better memory-efficiency on large input files

- set default user as "root" in docker containers and ensure that cellranger is writeable
  to allow running in nextflow or singularity (https://github.com/nf-core/modules/pull/1706)

### 1.2.4

- enables unit testing via nextflow for nf-core module

- removes forced "auto" chemistry for 10x technology (allows setting for test fies too small for automated detection)

- sets default values for last call parameters to 10x technology if not found (allows runs without errors on 1st call)

- enables computing RNA offset parameters without warning messages (supports containerised workflows)  

### 1.2.3

- enables GitHub citation widget

- updates SmartSeq2 and SmartSeq3 default barcodes 
