@@ -1,0 +1,96 @@
+AACGTGAT
+AAACATCG
+ATGCCTAA
+AGTGGTCA
+ACCACTGT
+ACATTGGC
+CAGATCTG
+CATCAAGT
+CGCTGATC
+ACAAGCTA
+CTGTAGCC
+AGTACAAG
+AACAACCA
+AACCGAGA
+AACGCTTA
+AAGACGGA
+AAGGTACA
+ACACAGAA
+ACAGCAGA
+ACCTCCAA
+ACGCTCGA
+ACGTATCA
+ACTATGCA
+AGAGTCAA
+AGATCGCA
+AGCAGGAA
+AGTCACTA
+ATCCTGTA
+ATTGAGGA
+CAACCACA
+CAAGACTA
+CAATGGAA
+CACTTCGA
+CAGCGTTA
+CATACCAA
+CCAGTTCA
+CCGAAGTA
+CCGTGAGA
+CCTCCTGA
+CGAACTTA
+CGACTGGA
+CGCATACA
+CTCAATGA
+CTGAGCCA
+CTGGCATA
+GAATCTGA
+GACTAGTA
+GAGCTGAA
+GATAGACA
+GCCACATA
+GCGAGTAA
+GCTAACGA
+GCTCGGTA
+GGAGAACA
+GGTGCGAA
+GTACGCAA
+GTCGTAGA
+GTCTGTCA
+GTGTTCTA
+TAGGATGA
+TATCAGCA
+TCCGTCTA
+TCTTCACA
+TGAAGAGA
+TGGAACAA
+TGGCTTCA
+TGGTGGTA
+TTCACGCA
+AACTCACC
+AAGAGATC
+AAGGACAC
+AATCCGTC
+AATGTTGC
+ACACGACC
+ACAGATTC
+AGATGTAC
+AGCACCTC
+AGCCATGC
+AGGCTAAC
+ATAGCGAC
+ATCATTCC
+ATTGGCTC
+CAAGGAGC
+CACCTTAC
+CCATCCTC
+CCGACAAC
+CCTAATCC
+CCTCTATC
+CGACACAC
+CGGATTGC
+CTAAGGTC
+GAACAGGC
+GACAGTGC
+GAGTTAGC
+GATGAATC
+GCCAAGAC
